feat : [PMF] 이슈 발송 로직 수정
https://www.notion.so/1c5377c2042f443eb86175ac195f622b?v=fe35e200a74d42bda512f57b7d06a221&p=2f9dc44101ed80ef94decaf96e3f3145&pm=s